[package]
name = "kafka"
version = "0.1.2"
authors = ["Yousuf Fauzan https://github.com/spicavigo"]
description = "Rust client for Apache Kafka"
homepage = "https://github.com/spicavigo/kafka-rust"
repository = "https://github.com/spicavigo/kafka-rust"
documentation = "http://fauzism.co/rustdoc/kafka/index.html"
readme = "README.md"
keywords = ["kafka", "apache"]
license = "MIT"


[dependencies]
num = "*"
byteorder = "*"
libc="*"
flate2 = "*"
